crates/rig-derive/tests/ui/tool_args/fail_duplicate_param_description.rs
use rig_derive::rig_tool;

// A repeated `params(...)` key used to silently last-win; it must error.
#[rig_tool(params(query = "first", query = "second"))]
fn search(query: String) -> Result<String, rig_core::tool::ToolExecutionError> {
    Ok(query)
}

fn main() {}
